--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,10 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: apt helper action
-      uses: ryankurte/action-apt@v0.1.0
-      with:
-        packages: libsfml-dev libcsfml-dev libasound2-dev
+    - name: download packages
+      run: |
+        sudo apt-get update -y && sudo apt-get install -y libsfml-dev libcsfml-dev libasound2-dev
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
